--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
     padding: 0;
     font-family: sans-serif;
   }
+
+  /* //Responsiveness */
+
+  @media screen and (max-width:989px){
+    nav .brand-logo {
+     left:8%;
+    }
+    
+  }
